--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+:root {
+  --white: #FFF;
+  --black: #1D1E2C;
+  --gray: #59656f;
+  --paleSilver: #d7cdcc;
+  --violet: #9c528b;
+  --veryperi: #6667AB;
+
+  --tabletBreakpoint: 768px;
+  --mobileBreakpoint: 376px;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  width: 70%;
+  height: 100%;
+  margin: 0 auto;
+  background-color: var(--white);
+  font-family: "Montserrat", sans-serif;
+  font-size: 1rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  height: 100%;
+}
+
+input, button, select, option {
+  font-family: inherit;
+}
+
+figure {
+  margin: 0;
+}
+
+@media only screen 
+and (max-device-width: 768px) {
+  body {
+    width: 100%;
+  }
 }
