--- a/src/components/Movies/FiltersPanel/FiltersPanel.module.css
+++ b/src/components/Movies/FiltersPanel/FiltersPanel.module.css
@@ -10,6 +10,13 @@
   width: 25%;
 }
 
+.error {
+  position: absolute;
+  inset-inline-start: 50%;
+  inset-block-start: 50%;
+  transform: translate(-50%, -50%);
+}
+
 @media only screen
 and (max-device-width: 376px) {
   .filtersPanel {
